--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif+Bengali:wght@100..900&display=swap');
 @import "tailwindcss";
 
-@import url('https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@300;400;500;600;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@700;900&display=swap'); /* ইংলিশ হেডলাইনের জন্য */
-
 body {
-  font-family: 'Hind Siliguri', sans-serif;
+   font-family: "Noto Serif Bengali", serif;
   background-color: #e5e5e5; /* hex code used directly */
 }
